--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "idb": "^2.1.1",
     "ngx-device-detector": "^1.2.2",
     "rxjs": "^6.3.2",
+    "rxjs-compat": "^6.3.2",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
