--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "precache": "sw-precache --verbose --config=sw-precache-config.js",
+    "buildAndPrecache": "npm run build && npm run precache"
   },
   "private": true,
   "dependencies": {
@@ -53,6 +55,7 @@
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^1.0.0",
     "protractor": "~5.4.0",
+    "sw-precache": "^5.2.1",
     "ts-node": "~7.0.1",
     "tslint": "~5.11.0",
     "typescript": "2.7.2"
