Fixed a warning due a incorrect import

--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "buildProd": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "precache": "sw-precache --verbose --config=sw-precache-config.js",
-    "buildAndPrecache": "npm run build && npm run precache"
+    "buildAndPrecache": "npm run build && npm run precache",
+    "buildAndPrecacheProd": "npm run build && npm run precache"
   },
   "private": true,
   "dependencies": {
