--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@angular/cli": "6.2.1",
     "@angular/compiler-cli": "^6.1.7",
     "@angular/language-service": "^6.1.7",
+    "@types/hammerjs": "^2.0.36",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~10.9.4",
