--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "e2e": "ng e2e",
     "precache": "sw-precache --verbose --config=sw-precache-config.js",
     "buildAndPrecache": "npm run build && npm run precache",
-    "buildAndPrecacheProd": "npm run build && npm run precache"
+    "buildAndPrecacheProd": "npm run buildProd && npm run precache"
   },
   "private": true,
   "dependencies": {
@@ -21,17 +21,17 @@
     "@angular/common": "^6.1.7",
     "@angular/compiler": "^6.1.7",
     "@angular/core": "^6.1.7",
+    "@angular/fire": "^5.0.0",
     "@angular/forms": "^6.1.7",
     "@angular/http": "^6.1.7",
     "@angular/material": "^6.4.7",
     "@angular/platform-browser": "^6.1.7",
     "@angular/platform-browser-dynamic": "^6.1.7",
     "@angular/router": "^6.1.7",
-    "angularfire2": "^5.0.0-rc.6.0",
     "core-js": "^2.4.1",
-    "firebase": "^5.4.2",
-    "firebaseui": "^3.4.0",
-    "firebaseui-angular": "^3.3.0",
+    "firebase": "5.4.2",
+    "firebaseui": "3.4.0",
+    "firebaseui-angular": "3.3.2",
     "hammerjs": "^2.0.8",
     "idb": "^2.1.1",
     "ngx-device-detector": "^1.2.2",
