--- a/angular.json
+++ b/angular.json
@@ -20,7 +20,8 @@
               "src/assets",
               "src/favicon.ico",
               "src/manifest.json",
-              "src/browserconfig.xml"
+              "src/browserconfig.xml",
+              "src/manifest.json"
             ],
             "styles": [
               "src/styles.css",
@@ -44,7 +45,8 @@
                   "replace": "src/environments/environment.ts",
                   "with": "src/environments/environment.prod.ts"
                 }
-              ]
+              ],
+              "serviceWorker": true
             }
           }
         },
@@ -79,7 +81,8 @@
             ],
             "assets": [
               "src/assets",
-              "src/favicon.ico"
+              "src/favicon.ico",
+              "src/manifest.json"
             ]
           }
         },
