--- a/package.json
+++ b/package.json
@@ -13,35 +13,36 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.1.7",
-    "@angular/cdk": "^6.4.7",
-    "@angular/common": "^6.1.7",
-    "@angular/compiler": "^6.1.7",
-    "@angular/core": "^6.1.7",
+    "@angular/animations": "^7.1.3",
+    "@angular/cdk": "^7.1.1",
+    "@angular/common": "^7.1.3",
+    "@angular/compiler": "^7.1.3",
+    "@angular/core": "^7.1.3",
     "@angular/fire": "^5.0.0",
-    "@angular/forms": "^6.1.7",
-    "@angular/http": "^6.1.7",
-    "@angular/material": "^6.4.7",
-    "@angular/platform-browser": "^6.1.7",
-    "@angular/platform-browser-dynamic": "^6.1.7",
+    "@angular/forms": "^7.1.3",
+    "@angular/http": "^7.1.3",
+    "@angular/material": "^7.1.1",
+    "@angular/platform-browser": "^7.1.3",
+    "@angular/platform-browser-dynamic": "^7.1.3",
     "@angular/pwa": "^0.10.2",
-    "@angular/router": "^6.1.7",
-    "@angular/service-worker": "^6.1.7",
+    "@angular/router": "^7.1.3",
+    "@angular/service-worker": "^7.1.3",
     "core-js": "^2.4.1",
     "firebase": "5.4.2",
     "firebaseui": "3.4.0",
     "firebaseui-angular": "3.3.2",
     "hammerjs": "^2.0.8",
     "idb": "^2.1.1",
-    "rxjs": "^6.3.2",
+    "rxjs": "^6.3.3",
     "rxjs-compat": "^6.3.2",
+    "tslib": "^1.9.0",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.8.0",
-    "@angular/cli": "6.2.1",
-    "@angular/compiler-cli": "^6.1.7",
-    "@angular/language-service": "^6.1.7",
+    "@angular-devkit/build-angular": "~0.11.0",
+    "@angular/cli": "7.1.3",
+    "@angular/compiler-cli": "^7.1.3",
+    "@angular/language-service": "^7.1.3",
     "@types/hammerjs": "^2.0.36",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.2",
@@ -58,6 +59,6 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.1",
     "tslint": "~5.11.0",
-    "typescript": "2.7.2"
+    "typescript": "3.1.6"
   }
 }
