Added a function to update all LapTimes. Note: Now it's half broken as an heavy refactor is needed for future updates

--- a/firebase.rules.json
+++ b/firebase.rules.json
@@ -9,7 +9,8 @@
                         "car/name",
                         "track/name",
                         "track/length",
-                        "time/millisecs"
+                        "time/millisecs",
+                        "version"
                     ]
                 }
             }
