--- a/functions/package.json
+++ b/functions/package.json
@@ -9,7 +9,7 @@
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log"
   },
-  "main": "lib/index.js",
+  "main": "lib/src/index.js",
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.16.4",
