--- a/angular.json
+++ b/angular.json
@@ -53,7 +53,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "assettocorsatimetracker:build"
+            "browserTarget": "assettocorsatimetracker:build",
+            "proxyConfig": "src/proxy.conf.json"
           },
           "configurations": {
             "production": {
