--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "gulp": "gulp"
+    "gulp": "gulp",
+    "compile:server": "webpack --config webpack.server.config.js --progress --colors",
+    "serve:ssr": "node dist/server",
+    "build:ssr": "npm run build:client-and-server-bundles && npm run compile:server",
+    "build:client-and-server-bundles": "ng build && ng run assettocorsatimetracker:server",
+    "_build:client-and-server-bundles": "ng build --prod && ng run assettocorsatimetracker:server:production"
   },
   "private": true,
   "dependencies": {
@@ -25,10 +30,15 @@
     "@angular/material": "^7.1.1",
     "@angular/platform-browser": "^7.1.3",
     "@angular/platform-browser-dynamic": "^7.1.3",
+    "@angular/platform-server": "^7.1.3",
     "@angular/pwa": "^0.10.2",
     "@angular/router": "^7.1.3",
     "@angular/service-worker": "^7.1.3",
+    "@nguniversal/express-engine": "^7.1.1",
+    "@nguniversal/module-map-ngfactory-loader": "0.0.0",
     "core-js": "^2.4.1",
+    "domino": "^2.1.3",
+    "express": "^4.15.2",
     "firebase": "5.4.2",
     "firebaseui": "3.4.0",
     "firebaseui-angular": "3.3.2",
@@ -60,8 +70,10 @@
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^1.0.0",
     "protractor": "~5.4.0",
+    "ts-loader": "^5.2.0",
     "ts-node": "~7.0.1",
     "tslint": "~5.11.0",
-    "typescript": "3.1.6"
+    "typescript": "3.1.6",
+    "webpack-cli": "^3.1.0"
   }
 }
