--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "buildProd": "ng build --prod --aot",
+    "build:prod": "ng build --prod --aot",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
@@ -14,8 +14,9 @@
     "compile:server": "webpack --config webpack.server.config.js --progress --colors",
     "serve:ssr": "node dist/server",
     "build:ssr": "npm run build:client-and-server-bundles && npm run compile:server",
-    "build:client-and-server-bundles": "ng build && ng run assettocorsatimetracker:server",
-    "_build:client-and-server-bundles": "ng build --prod && ng run assettocorsatimetracker:server:production"
+    "build:ssr:prod": "npm run build:client-and-server-bundles:prod && npm run compile:server",
+    "build:client-and-server-bundles": "npm run build && ng run assettocorsatimetracker:server",
+    "build:client-and-server-bundles:prod": "npm run build:prod && ng run assettocorsatimetracker:server:production"
   },
   "private": true,
   "dependencies": {
