--- a/functions/package.json
+++ b/functions/package.json
@@ -1,8 +1,11 @@
 {
   "name": "functions",
+  "engines": {
+    "node": "8"
+  },
   "scripts": {
     "lint": "tslint --project tsconfig.json",
-    "build": "tsc",
+    "build": "node cp-angular && tsc",
     "serve": "npm run build && firebase serve --only functions",
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
@@ -15,10 +18,12 @@
     "express": "^4.16.4",
     "express-validator": "^5.3.1",
     "firebase": "^5.11.1",
-    "firebase-admin": "~6.0.0",
-    "firebase-functions": "^2.0.3"
+    "firebase-admin": "^7.3.0",
+    "firebase-functions": "^2.3.1",
+    "fs-extra": "^8.0.1"
   },
   "devDependencies": {
+    "firebase-functions-test": "^0.1.6",
     "tslint": "~5.8.0",
     "typescript": "^3.1.3"
   },
