--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -38,5 +38,19 @@
         ]
       }
     }
+  ],
+  "dataGroups": [
+    {
+      "name": "apiResponsesCaching",
+      "urls": [
+        "/api/**"
+      ],
+      "version": 1,
+      "cacheConfig": {
+        "strategy": "freshness",
+        "maxSize": 100,
+        "maxAge": "14d"
+      }
+    }
   ]
 }
