--- a/package.json
+++ b/package.json
@@ -20,65 +20,64 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.1.3",
-    "@angular/cdk": "^7.1.1",
-    "@angular/common": "^7.1.3",
-    "@angular/compiler": "^7.1.3",
-    "@angular/core": "^7.1.3",
-    "@angular/fire": "^5.0.0",
-    "@angular/forms": "^7.1.3",
-    "@angular/http": "^7.1.3",
-    "@angular/material": "^7.1.1",
-    "@angular/platform-browser": "^7.1.3",
-    "@angular/platform-browser-dynamic": "^7.1.3",
-    "@angular/platform-server": "^7.1.3",
-    "@angular/pwa": "^0.10.2",
-    "@angular/router": "^7.1.3",
-    "@angular/service-worker": "^7.1.3",
+    "@angular/animations": "^8.0.0",
+    "@angular/cdk": "^8.0.0",
+    "@angular/common": "^8.0.0",
+    "@angular/compiler": "^8.0.0",
+    "@angular/core": "^8.0.0",
+    "@angular/fire": "^5.1.3",
+    "@angular/forms": "^8.0.0",
+    "@angular/http": "^7.2.15",
+    "@angular/material": "^8.0.0",
+    "@angular/platform-browser": "^8.0.0",
+    "@angular/platform-browser-dynamic": "^8.0.0",
+    "@angular/platform-server": "^8.0.0",
+    "@angular/pwa": "^0.800.0",
+    "@angular/router": "^8.0.0",
+    "@angular/service-worker": "^8.0.0",
     "@nguniversal/express-engine": "^7.1.1",
-    "@nguniversal/module-map-ngfactory-loader": "0.0.0",
-    "core-js": "^2.4.1",
+    "@nguniversal/module-map-ngfactory-loader": "^7.1.1",
+    "core-js": "^3.1.3",
     "domino": "^2.1.3",
-    "express": "^4.15.2",
-    "firebase": "5.4.2",
-    "firebaseui": "3.4.0",
-    "firebaseui-angular": "3.3.2",
+    "express": "^4.17.1",
+    "firebase": "6.1.0",
+    "firebaseui": "4.0.0",
+    "firebaseui-angular": "3.4.2",
     "hammerjs": "^2.0.8",
     "idb": "^2.1.1",
-    "rxjs": "^6.3.3",
-    "rxjs-compat": "^6.3.2",
+    "rxjs": "^6.5.2",
     "tslib": "^1.9.0",
-    "zone.js": "^0.8.14"
+    "zone.js": "^0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.11.0",
-    "@angular/cli": "7.1.3",
-    "@angular/compiler-cli": "^7.1.3",
-    "@angular/language-service": "^7.1.3",
+    "@angular-devkit/build-angular": "^0.800.0",
+    "@angular/cli": "^8.0.0",
+    "@angular/compiler-cli": "^8.0.0",
+    "@angular/language-service": "^8.0.0",
     "@types/hammerjs": "^2.0.36",
-    "@types/jasmine": "~2.8.6",
-    "@types/jasminewd2": "~2.0.2",
+    "@types/jasmine": "^3.3.13",
+    "@types/jasminewd2": "^2.0.6",
     "@types/node": "~10.9.4",
     "bufferutil": "^4.0.1",
-    "codelyzer": "~4.4.4",
-    "gulp": "^4.0.0",
+    "codelyzer": "^5.0.1",
+    "gulp": "^4.0.2",
     "gulp-exec": "^3.0.2",
-    "jasmine-core": "~3.2.1",
+    "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.0.0",
+    "karma": "~4.1.0",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^2.0.3",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^1.0.0",
-    "protractor": "~5.4.0",
-    "ts-loader": "^5.2.0",
-    "ts-node": "~7.0.1",
-    "tslint": "~5.11.0",
-    "typescript": "3.1.6",
+    "karma-cli": "~2.0.0",
+    "karma-coverage-istanbul-reporter": "^2.0.5",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.2",
+    "protractor": "^5.4.2",
+    "ts-loader": "^6.0.1",
+    "ts-node": "~8.2.0",
+    "tslint": "~5.16.0",
+    "typescript": "~3.4.0",
     "utf-8-validate": "^5.0.2",
     "webpack-cli": "^3.1.0",
     "ws": "^7.0.0",
-    "xhr2": "^0.1.4"
+    "xhr2": "^0.2.0"
   }
 }
