Linked firebase.rules.json Added explicit rules for the root db path

--- a/firebase.json
+++ b/firebase.json
@@ -17,7 +17,8 @@
       }
     ]
   },
-  "functions": {
-    
-  }
+  "database": {
+    "rules": "database.rules.json"
+  },
+  "functions": {}
 }
