--- a/firebase.rules.json
+++ b/firebase.rules.json
@@ -1,19 +1,21 @@
 {
-    "rules": {
-        "users": {
-            "$uid": {
-                ".read": "$uid === auth.uid",
-                ".write": "$uid === auth.uid",
-                "lapTimes": {
-                    ".indexOn": [
-                        "car/name",
-                        "track/name",
-                        "track/length",
-                        "time/millisecs",
-                        "version"
-                    ]
-                }
-            }
+  "rules": {
+    ".read": "false",
+    ".write": "false",
+    "users": {
+      "$uid": {
+        ".read": "$uid === auth.uid",
+        ".write": "$uid === auth.uid",
+        "lapTimes": {
+          ".indexOn": [
+            "car/name",
+            "track/name",
+            "track/length",
+            "time/millisecs",
+            "version"
+          ]
         }
+      }
     }
+  }
 }
