Added notifications APIs.  - get a list of notifications  - mark a notification as already read

--- a/firebase.rules.json
+++ b/firebase.rules.json
@@ -12,6 +12,11 @@
                         "time/millisecs",
                         "version"
                     ]
+                },
+                "notifications": {
+                    ".indexOn": [
+                        "alreadyRead"
+                    ]
                 }
             }
         }
