--- a/functions/package.json
+++ b/functions/package.json
@@ -17,16 +17,17 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "express-validator": "^5.3.1",
-    "firebase": "^5.11.1",
+    "express-validator": "^6.2.0",
+    "firebase": "^6.6.2",
     "firebase-admin": "^8.6.0",
     "firebase-functions": "^3.2.0",
     "fs-extra": "^8.1.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.6",
     "firebase-functions-test": "^0.1.6",
     "ts-loader": "^6.1.2",
-    "tslint": "~5.8.0",
+    "tslint": "~5.20.0",
     "typescript": "^3.6.3",
     "webpack": "^4.41.0",
     "webpack-node-externals": "^1.7.2"
